# automation-agent

./: README.md  example_mcp_server.py  pyproject.toml  talk2mcp.py
