[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "genai",
    "google-genai>=1.39.1",
    "mcp[cli]>=1.15.0",
    "pillow>=11.3.0",
    "pywinauto>=0.6.9",
    "tiktoken>=0.4.0",
]
